# tantivy

./: .gitignore  .prettierignore  Cargo.toml  index.d.ts  index.js  package.json  tsconfig.json
.github/workflows/: ci.yml  lint.yml
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: field_entry.rs  helpers.rs  index.rs  index_writer.rs  lib.rs  schema.rs  schema_builder.rs
