[package]
authors = ['Mestery <mestery@pm.me>']
edition = '2018'
name = 'tantivy'
version = '0.0.0'

[lib]
crate-type = ['cdylib']

[dependencies]
napi = '1.7.7'
napi-derive = '1.1.0'
tantivy = '0.16.1'

[build-dependencies]
napi-build = '1.1.0'

[target.'cfg(all(any(windows, unix), target_arch = "x86_64", not(target_env = "musl")))'.dependencies]
mimalloc = '0.1.26'

[profile.release]
lto = true
opt-level = 3
