[package]
authors = ['Mestery <mestery@pm.me>']
edition = '2018'
name = 'tantivy'
version = '0.0.0'

[lib]
crate-type = ['cdylib']

[dependencies]
serde_json = '1.0.68'
napi = { version = '1.7.7', features = ['napi5', 'napi6'] }
napi-derive = '1.1.0'
tantivy = { git = 'https://github.com/Mesteery/tantivy-1', branch = 'patch-1' }

[build-dependencies]
napi-build = '1.1.0'

[target.'cfg(all(any(windows, unix), target_arch = "x86_64", not(target_env = "musl")))'.dependencies]
mimalloc = '0.1.26'

[profile.release]
lto = true
opt-level = 3
